--- a/airpollutionweb/airpollutionweb.csproj
+++ b/airpollutionweb/airpollutionweb.csproj
@@ -43,6 +43,18 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PublishDatabaseSettings>
+      <Objects>
+        <ObjectGroup Name="MyDbConnection 部署" Order="1">
+          <Destination Path="Data Source=163.17.9.68%3bInitial Catalog=DB1_05%3bPersist Security Info=True%3bUser ID=DB1_05%3bPassword=DB1_05" />
+          <Object Type="DbFullSql">
+            <PreSource Path="Data Source=163.17.9.68%3bInitial Catalog=DB1_05%3bUser ID=DB1_05%3bPassword=DB1_05" ScriptSchema="True" ScriptData="False" CopyAllFullTextCatalogs="False" DriDefaults="True" />
+            <Source Path="obj\Release\AutoScripts\MyDbConnection 部署_SchemaOnly.sql" Transacted="True" />
+          </Object>
+        </ObjectGroup>
+      </Objects>
+    </PublishDatabaseSettings>
+    <IncludeIisSettings>false</IncludeIisSettings>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
