--- a/airpollutionweb/airpollutionweb.csproj
+++ b/airpollutionweb/airpollutionweb.csproj
@@ -153,6 +153,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="css\airpollutionDataUpdate.css" />
     <Content Include="css\login.css" />
     <Content Include="css\airpollutionIntroduction.css" />
     <Content Include="css\main.css" />
